tests/error/error03.nex
fun f()
{
}

print f.x;
